@@ -12,3 +12,7 @@ repositories {
 dependencies {
     implementation project(':')
 }
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-native-access=ALL-UNNAMED"
+}
